# memory-letters

./: .gitignore  README.md  pyproject.toml
memory_letters/: __init__.py  __main__.py
memory_letters.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
