[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-letters"
version = "1.0.0"
description = "Your agents can be replaced. Your identity persists."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
memory-letters = "memory_letters:main"
